--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header-area" id="header-area">
+    <div class="header-area home " id="header-area">
         <div class="overlay"></div>
         <div class="navbar">
             <div class="container">
                 <div class="logo">negm</div>
                 <div class="links" id="links">
-                    <ul>
-                        <li><a href="#header-area">home</a> </li>
+                    <ul id="links-list">
+                        <!-- <li><a href="#header-area">home</a> </li>
                         <li><a href="#about">about</a></li>
                         <li><a href="#catigories">catigories</a></li>
                         <li><a href="#testimonials">testimonials</a></li>
-                        <li><a href="#contact">contact us</a></li>
+                        <li><a href="#contact">contact us</a></li> -->
                     </ul>
                 </div>
                 <div class="menue" id="menue">
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="about" id="about">
+    <div class="about" >
         <div class="container">
             <div class="text">
                 <h2>about us</h2>
@@ -53,7 +53,7 @@
     </div>
 
 
-    <div class="catigories" id="catigories">
+    <div class="catigories" >
         <h2>EXPLORE ROOMS</h2>
         <div class="container">
             <div class="cat">
@@ -134,7 +134,7 @@
         </div>
     </div>
 
-    <div class="testimonials" id="testimonials">
+    <div class="testimonials" >
         <h2>client testimonial</h2>
         <div class="container">
             <div class="client">
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-    <div class="contact" id="contact">
+    <div class="contact" >
         <div class="container">
             <div class="left">
                 <h2>contact us</h2>
